// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prompts (isCI = false) > confirm > can cancel 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m  [9m[2mNo[22m[29m
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > confirm > can set initialValue 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m○[22m [2mYes[22m [2m/[22m [32m●[39m No
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mNo[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > confirm > left arrow moves to previous choice 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [2m○[22m [2mYes[22m [2m/[22m [32m●[39m No",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mYes[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > confirm > renders custom active choice 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m bleep [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mbleep[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > confirm > renders custom inactive choice 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mbleep[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mYes[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > confirm > renders message with choices 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mYes[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > confirm > right arrow moves to next choice 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [2m○[22m [2mYes[22m [2m/[22m [32m●[39m No",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mNo[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > multiselect > can cancel 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > multiselect > can set cursorAt to preselect an option 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m└[39m
",
  "[999D[5A",
  "[3B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt1",
  "[2B",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > multiselect > can set initial values 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [32m◼[39m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > multiselect > can submit without selection when required = false 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mnone[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > multiselect > maxItems renders a sliding window 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[4B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [36m◻[39m opt3
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [36m◻[39m opt4
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [36m◻[39m opt5
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [36m◻[39m opt6
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[5B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt6",
  "[4B",
  "[999D[9A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt6[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > multiselect > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt0",
  "[3B",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > multiselect > renders multiple selected options 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "[999D[6A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt0",
  "[4B",
  "[999D[6A",
  "[2B",
  "[J",
  "[36m│[39m  [32m◼[39m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt1",
  "[3B",
  "[999D[6A",
  "[3B",
  "[J",
  "[36m│[39m  [32m◼[39m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m└[39m
",
  "[999D[6A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m[2m, [22m[2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > multiselect > renders validation errors 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[33m▲[39m  foo
[33m│[39m  [36m◻[39m opt0
[33m│[39m  [2m◻[22m [2mopt1[22m
[33m└[39m  [33mPlease select at least one option.[39m
[0m[2mPress [90m[47m[7m space [27m[49m[39m to select, [90m[47m[7m enter [27m[49m[39m to submit[22m[0m
",
  "[999D[6A",
  "[1B",
  "[J",
  "[36m◆[39m  foo
[36m│[39m  [32m◼[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > multiselect > sliding window loops downwards 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[4B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [36m◻[39m opt3
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [36m◻[39m opt4
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [36m◻[39m opt5
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [36m◻[39m opt6
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [36m◻[39m opt7
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [36m◻[39m opt8
[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [36m◻[39m opt9
[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [2m◻[22m [2mopt11[22m
[36m└[39m
",
  "[999D[9A",
  "[5B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [36m◻[39m opt10
[36m│[39m  [2m◻[22m [2mopt11[22m
[36m└[39m
",
  "[999D[9A",
  "[6B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [36m◻[39m opt11
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt0",
  "[7B",
  "[999D[9A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > multiselect > sliding window loops upwards 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [36m◻[39m opt11
[36m└[39m
",
  "[999D[9A",
  "[7B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt11",
  "[2B",
  "[999D[9A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt11[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > select > can cancel 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m  [9m[2mopt0[22m[29m
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > select > down arrow selects next option 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[J",
  "[36m│[39m  [2m○[22m [2mopt0[22m
[36m│[39m  [32m●[39m opt1
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > select > renders option hints 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0 [2m(Hint 0)[22m
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > select > renders option labels 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Option 0
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mOption 0[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > select > renders options and message 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > select > up arrow selects previous option 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[J",
  "[36m│[39m  [2m○[22m [2mopt0[22m
[36m│[39m  [32m●[39m opt1
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[J",
  "[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > spinner > message > sets message for next frame 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[35m◐[39m  foo",
]
`;

exports[`prompts (isCI = false) > spinner > start > renders frames at interval 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[35m◐[39m  ",
  "[999D",
  "[J",
  "[35m◓[39m  ",
  "[999D",
  "[J",
  "[35m◑[39m  ",
]
`;

exports[`prompts (isCI = false) > spinner > start > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  foo",
]
`;

exports[`prompts (isCI = false) > spinner > start > renders timer when indicator is "timer" 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m   [0s]",
]
`;

exports[`prompts (isCI = false) > spinner > stop > renders cancel symbol if code = 1 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[31m■[39m  
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > spinner > stop > renders error symbol if code > 1 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[31m▲[39m  
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > spinner > stop > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[32m◇[39m  foo
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > spinner > stop > renders submit symbol and stops spinner 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[32m◇[39m  
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > text > can cancel 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m[9m[2m[22m[29m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > text > defaultValue sets the value but does not render 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mbar[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > text > renders cancelled value if one set 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  x█",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  xy█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m  [9m[2mxy[22m[29m
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > text > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mundefined[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > text > renders placeholder if set 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7mb[27m[2mar[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mbar[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > text > renders submitted value 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  x█",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  xy█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mxy[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > text > validation errors render and clear (using Error) 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  x█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[33m▲[39m  foo
[33m│[39m  x█
[33m└[39m  [33mshould be xy[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[36m◆[39m  foo
[36m│[39m  xy█
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mxy[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > text > validation errors render and clear 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  x█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[33m▲[39m  foo
[33m│[39m  x█
[33m└[39m  [33mshould be xy[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[36m◆[39m  foo
[36m│[39m  xy█
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mxy[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > confirm > can cancel 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m  [9m[2mNo[22m[29m
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > confirm > can set initialValue 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m○[22m [2mYes[22m [2m/[22m [32m●[39m No
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mNo[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > confirm > left arrow moves to previous choice 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [2m○[22m [2mYes[22m [2m/[22m [32m●[39m No",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mYes[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > confirm > renders custom active choice 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m bleep [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mbleep[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > confirm > renders custom inactive choice 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mbleep[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mYes[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > confirm > renders message with choices 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mYes[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > confirm > right arrow moves to next choice 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [2m○[22m [2mYes[22m [2m/[22m [32m●[39m No",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mNo[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > multiselect > can cancel 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > multiselect > can set cursorAt to preselect an option 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m└[39m
",
  "[999D[5A",
  "[3B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt1",
  "[2B",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > multiselect > can set initial values 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [32m◼[39m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > multiselect > can submit without selection when required = false 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mnone[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > multiselect > maxItems renders a sliding window 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[4B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [36m◻[39m opt3
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [36m◻[39m opt4
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [36m◻[39m opt5
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [36m◻[39m opt6
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[5B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt6",
  "[4B",
  "[999D[9A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt6[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > multiselect > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt0",
  "[3B",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > multiselect > renders multiple selected options 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "[999D[6A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt0",
  "[4B",
  "[999D[6A",
  "[2B",
  "[J",
  "[36m│[39m  [32m◼[39m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt1",
  "[3B",
  "[999D[6A",
  "[3B",
  "[J",
  "[36m│[39m  [32m◼[39m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m└[39m
",
  "[999D[6A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m[2m, [22m[2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > multiselect > renders validation errors 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[33m▲[39m  foo
[33m│[39m  [36m◻[39m opt0
[33m│[39m  [2m◻[22m [2mopt1[22m
[33m└[39m  [33mPlease select at least one option.[39m
[0m[2mPress [90m[47m[7m space [27m[49m[39m to select, [90m[47m[7m enter [27m[49m[39m to submit[22m[0m
",
  "[999D[6A",
  "[1B",
  "[J",
  "[36m◆[39m  foo
[36m│[39m  [32m◼[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > multiselect > sliding window loops downwards 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[4B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [36m◻[39m opt3
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [36m◻[39m opt4
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [36m◻[39m opt5
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [36m◻[39m opt6
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [36m◻[39m opt7
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [36m◻[39m opt8
[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [36m◻[39m opt9
[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [2m◻[22m [2mopt11[22m
[36m└[39m
",
  "[999D[9A",
  "[5B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [36m◻[39m opt10
[36m│[39m  [2m◻[22m [2mopt11[22m
[36m└[39m
",
  "[999D[9A",
  "[6B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [36m◻[39m opt11
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt0",
  "[7B",
  "[999D[9A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > multiselect > sliding window loops upwards 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [36m◻[39m opt11
[36m└[39m
",
  "[999D[9A",
  "[7B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt11",
  "[2B",
  "[999D[9A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt11[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > select > can cancel 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m  [9m[2mopt0[22m[29m
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > select > down arrow selects next option 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[J",
  "[36m│[39m  [2m○[22m [2mopt0[22m
[36m│[39m  [32m●[39m opt1
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > select > renders option hints 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0 [2m(Hint 0)[22m
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > select > renders option labels 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Option 0
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mOption 0[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > select > renders options and message 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > select > up arrow selects previous option 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[J",
  "[36m│[39m  [2m○[22m [2mopt0[22m
[36m│[39m  [32m●[39m opt1
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[J",
  "[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > spinner > message > sets message for next frame 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
  "
",
  "[999D",
  "[J",
  "[35m◐[39m  foo...",
]
`;

exports[`prompts (isCI = true) > spinner > start > renders frames at interval 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
]
`;

exports[`prompts (isCI = true) > spinner > start > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  foo...",
]
`;

exports[`prompts (isCI = true) > spinner > start > renders timer when indicator is "timer" 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
]
`;

exports[`prompts (isCI = true) > spinner > stop > renders cancel symbol if code = 1 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
  "
",
  "[999D",
  "[J",
  "[31m■[39m  
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > spinner > stop > renders error symbol if code > 1 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
  "
",
  "[999D",
  "[J",
  "[31m▲[39m  
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > spinner > stop > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
  "
",
  "[999D",
  "[J",
  "[32m◇[39m  foo
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > spinner > stop > renders submit symbol and stops spinner 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
  "
",
  "[999D",
  "[J",
  "[32m◇[39m  
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > text > can cancel 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m[9m[2m[22m[29m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > text > defaultValue sets the value but does not render 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mbar[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > text > renders cancelled value if one set 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  x█",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  xy█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m  [9m[2mxy[22m[29m
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > text > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mundefined[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > text > renders placeholder if set 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7mb[27m[2mar[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mbar[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > text > renders submitted value 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  x█",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  xy█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mxy[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > text > validation errors render and clear (using Error) 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  x█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[33m▲[39m  foo
[33m│[39m  x█
[33m└[39m  [33mshould be xy[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[36m◆[39m  foo
[36m│[39m  xy█
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mxy[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > text > validation errors render and clear 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  x█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[33m▲[39m  foo
[33m│[39m  x█
[33m└[39m  [33mshould be xy[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[36m◆[39m  foo
[36m│[39m  xy█
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mxy[22m",
  "
",
  "[?25h",
]
`;
